--- a/src/component/golobalStyle/style.scss
+++ b/src/component/golobalStyle/style.scss
@@ -2,8 +2,14 @@
 // @import 'node_modules/css-reset-and-normalize/scss/reset-and-normalize';
 @import 'normalize.css';
 :root {
+    --primary: rgba(254, 44, 85, 1);
+    //default layout
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
 }
 * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 html {
