--- a/src/component/button/Button.module.scss
+++ b/src/component/button/Button.module.scss
@@ -1,10 +1,62 @@
-.button {
-    min-width: 80px;
-    min-height: 36px;
+.wrapper {
+    min-width: 100px;
     background-color: var(--white);
-    border: 1px solid var(--primary);
-    border-radius: 5px;
+    font-size: 1.6rem;
+    font-weight: 700;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    cursor: pointer;
+    + .wrapper {
+        margin-left: 12px;
+    }
 }
-.button.primary {
+.icon + .title,
+.title + .icon {
+    margin-left: 8px;
+}
+// size
+
+.small {
+    min-width: 88px;
+    padding: 4px 12px;
+}
+.large {
+    min-width: 168px;
+    padding: 14px 12px;
+}
+.round {
+    border-radius: 999px;
+    border-color: rgba(22, 24, 35, 0.12);
+    box-shadow: 0 2px 8px rgb(0 0 0 / 6%);
+    padding: 8px 12px;
+}
+.outline {
+    color: var(--primary);
+    border-color: currentColor;
+    font-weight: 600;
+    font-size: 1.6rem;
+    &:hover {
+        background-color: rgba(254, 44, 85, 0.06);
+    }
+}
+//  primary size medium
+.primary {
+    padding: 8px;
+    color: var(--white);
     background-color: var(--primary);
+    border-color: currentColor;
+    box-shadow: none;
+    &:hover {
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), #fe2c55;
+    }
+}
+
+.text {
+    &:hover {
+        text-decoration: underline;
+    }
+}
+.disable {
+    opacity: 0.5;
+    pointer-events: none;
 }
