--- a/src/component/button/Button.module.scss
+++ b/src/component/button/Button.module.scss
@@ -12,10 +12,14 @@
 }
 .icon + .title,
 .title + .icon {
-    margin-left: 8px;
+    margin-left: 10px;
+}
+.icon {
+    display: inline-block;
+    width: 20px;
+    text-align: center;
 }
 // size
-
 .small {
     min-width: 88px;
     padding: 4px 12px;
