--- a/src/component/golobalStyle/style.scss
+++ b/src/component/golobalStyle/style.scss
@@ -35,3 +35,7 @@ a[to] {
     text-decoration: none;
     color: var(--text-color);
 }
+//tippy
+.tippy-svg-arrow {
+    fill: rgba(84, 84, 84, 0.92);
+}
