--- a/src/component/Popper/Menu/Menu.module.scss
+++ b/src/component/Popper/Menu/Menu.module.scss
@@ -22,3 +22,6 @@ a.menu-item {
         background-color: rgba(22, 24, 35, 0.06);
     }
 }
+.separate {
+    border-top: 1px solid rgba(22, 24, 35, 0.12);
+}
