--- a/src/component/golobalStyle/style.scss
+++ b/src/component/golobalStyle/style.scss
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
-// @import 'node_modules/css-reset-and-normalize/scss/reset-and-normalize';
 @import 'normalize.css';
 :root {
     --primary: rgba(254, 44, 85, 1);
@@ -14,11 +13,32 @@
     margin: 0;
     box-sizing: border-box;
 }
+// fonts embed
+@font-face {
+    font-family: ProximaNova;
+    src: url('/asset/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
+}
+@font-face {
+    font-family: ProximaNova;
+    src: url('/asset/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+@font-face {
+    font-family: ProximaNova;
+    src: url('/asset/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family: SofiaPro;
+    src: url('/asset/fonts/sofiapro-bold.woff2');
+    font-weight: 700;
+}
 html {
     font-size: 62.5%;
 }
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     line-height: 1.5em;
     font-size: 1.6em;
     color: #333;
@@ -36,6 +56,8 @@ a[to] {
     color: var(--text-color);
 }
 //tippy
-.tippy-svg-arrow {
-    fill: rgba(84, 84, 84, 0.92);
+body {
+    .tippy-svg-arrow {
+        fill: rgba(84, 84, 84, 0.92);
+    }
 }
