--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -15,71 +15,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.search-result,
-.search {
-    width: 361px;
-}
-.search {
-    height: var(--height-search);
-    background-color: rgba(22, 24, 35, 0.06);
-    border-radius: var(--border-radious-search);
-    display: flex;
-    align-items: center;
-    position: relative;
-    border: 1.5px solid transparent;
-    input {
-        flex: 1;
-        width: 292px;
-        height: 100%;
-        background-color: transparent;
-        padding: 0 16px;
-        font-size: 1.6rem;
-    }
-    &:focus-within {
-        border-color: rgba(22, 24, 35, 0.2);
-    }
-    input:not(:placeholder-shown) ~ .search-icon {
-        color: rgba(22, 24, 35, 0.75);
-    }
-}
-.search-title {
-    color: rgba(22, 24, 35, 0.5);
-    font-weight: 600;
-    font-size: 1.5rem;
-    padding: 5px 12px;
-}
-.clear,
-.loading {
-    position: absolute;
-    right: calc(var(--widht-seach-icon) + 14px);
-    background-color: transparent;
-    color: rgba(22, 24, 35, 0.34);
-}
-.search-icon {
-    border-top-right-radius: var(--border-radious-search);
-    border-bottom-right-radius: var(--border-radious-search);
-    font-size: 1.6rem;
-    color: rgba(22, 24, 35, 0.34);
-    width: var(--widht-seach-icon);
-    height: 100%;
-    position: relative;
-    &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        width: 1px;
-        top: 50%;
-        transform: translateY(-50%);
-        height: calc(var(--height-search) / 2);
-        background-color: rgba(22, 24, 35, 0.12);
-    }
-    &:hover {
-        background-color: rgba(22, 24, 35, 0.03);
-    }
-    &:active {
-        background-color: rgba(22, 24, 35, 0.06);
-    }
-}
+
 .actions {
     display: flex;
     align-items: center;
@@ -110,8 +46,25 @@ button.custom-upload {
     cursor: pointer;
 }
 .w-actions-i {
+    position: relative;
     display: inline-block;
     margin-left: 16px;
+}
+.notification {
+    position: absolute;
+    top: -2px;
+    right: -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1px;
+    color: var(--white);
+    background-color: var(--primary);
+    width: 20px;
+    height: 15px;
+    border-radius: 45%;
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 .user-img {
     width: 32px;
