--- a/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/component/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
 }
 .container {
+    margin-top: var(--default-layout-header-height);
     width: var(--default-layout-width);
     display: flex;
     justify-content: space-between;
@@ -12,4 +13,5 @@
     max-width: 692px;
     // khi content nhỏ hơn 692 thì nó lấy 692px
     width: 692px;
+    height: 1000px;
 }
