--- a/src/component/Layout/components/Header/Header.module.scss
+++ b/src/component/Layout/components/Header/Header.module.scss
@@ -2,11 +2,16 @@
     --border-radious-search: 92px;
     --height-search: 46px;
     --widht-seach-icon: 52px;
-    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     display: flex;
     justify-content: center;
-    height: var(--default-layout-header-height, 60);
     width: 100%;
+    height: var(--default-layout-header-height, 60);
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    background-color: var(--white);
 }
 .inner {
     padding: 0px 20px;
