--- a/src/component/Popper/Menu/Menu.module.scss
+++ b/src/component/Popper/Menu/Menu.module.scss
@@ -22,6 +22,15 @@ a.menu-item {
         background-color: rgba(22, 24, 35, 0.06);
     }
 }
+.language-item {
+    overflow: hidden auto;
+}
 .separate {
     border-top: 1px solid rgba(22, 24, 35, 0.12);
+}
+.overlay-bottom {
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background-color: transparent;
 }
