--- a/src/component/Popper/Wrapper.module.scss
+++ b/src/component/Popper/Wrapper.module.scss
@@ -1,10 +1,11 @@
 .popper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     min-width: 223px;
-    max-height: min((100vh - 96px) - 60px, 734px);
+    max-height: calc(100vh - 56px);
     padding-top: 8px;
     border-radius: 8px;
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
-    overflow: hidden auto;
 }
