--- a/src/component/golobalStyle/style.scss
+++ b/src/component/golobalStyle/style.scss
@@ -4,6 +4,7 @@
     --primary: rgba(254, 44, 85, 1);
     --white: white;
     --text-color: black;
+    --font-family: 'ProximaNova', sans-serif;
     //default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
@@ -38,17 +39,32 @@ html {
     font-size: 62.5%;
 }
 body {
-    font-family: 'ProximaNova', sans-serif;
+    overflow-y: overlay;
+    font-family: var(--font-family);
     line-height: 1.5em;
     font-size: 1.6em;
     color: #333;
 }
+// scrollbar
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 input,
 button,
 [tabindex] {
     border: none;
     outline: none;
-    font-family: inherit;
+    font-family: var(--font-family);
 }
 a[href],
 a[to] {
