--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
-    --border-radious-search: 92px;
+    --border-radius-search: 92px;
     --height-search: 46px;
-    --widht-seach-icon: 52px;
+    --width-search-icon: 52px;
     position: fixed;
     top: 0;
     left: 0;
@@ -13,6 +13,7 @@
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     background-color: var(--white);
 }
+
 .inner {
     padding: 0px 20px;
     width: var(--default-layout-width);
@@ -22,20 +23,27 @@
 }
 
 .actions {
+    width: 280px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
+
 button.custom-upload {
-    padding: 8px 17px;
+    height: 36px;
+    padding: 0px 17px;
     border: 1px solid rgba(22, 24, 35, 0.12);
     border-radius: 2px;
+
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
     }
 }
+
 .title-upload {
     font-weight: 600;
 }
+
 .icon-ellipsis {
     background-color: transparent;
     display: inline-block;
@@ -44,17 +52,20 @@ button.custom-upload {
     margin-left: 15px;
     cursor: pointer;
 }
+
 .actions-i,
 .w-actions-i {
     width: 26px;
     height: 26px;
     cursor: pointer;
 }
+
 .w-actions-i {
     position: relative;
     display: inline-block;
     margin-left: 16px;
 }
+
 .notification {
     position: absolute;
     top: -2px;
@@ -71,6 +82,7 @@ button.custom-upload {
     font-size: 1.1rem;
     font-weight: 600;
 }
+
 .user-img {
     width: 32px;
     height: 32px;
