--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -14,6 +14,11 @@
     background-color: var(--white);
 }
 
+.logo {
+    display: inline-block;
+    height: 42px;
+}
+
 .inner {
     padding: 0px 20px;
     width: var(--default-layout-width);
