--- a/src/component/golobalStyle/GlobalStyle.scss
+++ b/src/component/golobalStyle/GlobalStyle.scss
@@ -17,6 +17,10 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 // fonts embed
 @font-face {
     font-family: ProximaNova;
