--- a/src/layouts/DefaultLayout/Sidebar/Menu/Menu.module.scss
+++ b/src/layouts/DefaultLayout/Sidebar/Menu/Menu.module.scss
@@ -1,7 +1,11 @@
+.container {
+    padding: 16px 0 10px 10px;
+}
+
 .wrapper {
     display: flex;
     align-items: center;
-    padding: 8px 0px 8px 17px;
+    padding: 8px 0 8px 8px;
 
     &:hover {
         background: rgba(22, 24, 35, 0.03);
