--- a/src/component/Popper/ShowInformation/ShowInformation.module.scss
+++ b/src/component/Popper/ShowInformation/ShowInformation.module.scss
@@ -1,9 +1,9 @@
 .container {
-    width: calc(calc(var(--width-side-bar) - 30px));
     background-color: var(--white);
     box-shadow: rgb(0 0 0 / 12%) 0px 4px 16px;
     border-radius: 8px;
     padding: 20px;
+    width: 320px;
 }
 
 .btn-follow {
@@ -63,4 +63,19 @@
     font-size: 1.7rem;
     line-height: 20px;
     display: inline-block;
+}
+
+.w-description {
+    padding-top: 1px;
+    margin-top: 14px;
+}
+
+.description {
+    text-align: left;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: rgb(18, 18, 18);
+    white-space: pre-line;
+    margin-top: 14px;
 }
