--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -22,6 +22,7 @@
 .inner {
     padding: 0px 20px;
     width: var(--default-layout-width);
+    max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
