--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -12,6 +12,10 @@
     height: var(--default-layout-header-height, 60);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     background-color: var(--white);
+
+    .w-item {
+        height: 20px;
+    }
 }
 
 .logo {
@@ -95,4 +99,5 @@ button.custom-upload {
     border-radius: 50%;
     object-fit: cover;
     margin-left: 26px;
+    cursor: pointer;
 }
