--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -36,24 +36,22 @@
 }
 
 .post {
+    position: relative;
     display: flex;
+    padding: 20px 0;
 }
+
 
 .wrapper {
     margin-left: 12px;
+    flex: 1;
 }
 
 .video-container {
     display: flex;
 }
 
-.video {
-    height: calc(450px + (100vw - 768px) / 1152 * 100);
-    margin-right: 20px;
-    border-radius: 8px;
-    overflow: hidden;
-    cursor: pointer;
-}
+
 
 .action {
     display: flex;
