--- a/src/pages/Home/components/WrapperVideo/WrapperVideo.module.scss
+++ b/src/pages/Home/components/WrapperVideo/WrapperVideo.module.scss
@@ -40,6 +40,7 @@ $sizeVideo: calc(450px + ((100vw - 768px) / 1152) * 100);
     opacity: 1;
 
     .time-line {
+        background-color: red;
         display: block;
         height: 4px;
         --scale-timeline: 1.2;
@@ -156,7 +157,7 @@ $sizeVideo: calc(450px + ((100vw - 768px) / 1152) * 100);
     position: absolute;
     width: 16px;
     height: 40px;
-    top: -20px;
+    transform: translateY(-100%);
     left: 4px;
     cursor: default;
     background-color: transparent;
