--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -76,9 +76,17 @@
     }
 }
 
+//text
 .text {
+    height: 32px;
+    color: rgba(22, 24, 35, .75);
+    border-radius: 52px;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 6%);
+    cursor: pointer;
+    border: 1px solid rgba(22, 24, 35, .12);
+
     &:hover {
-        text-decoration: underline;
+        border-color: rgba(22, 24, 35, .2);
     }
 }
 
