--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -25,8 +25,7 @@
     right: 24px;
     display: flex;
     flex-direction: column;
-    align-items: end;
-    cursor: pointer;
+    align-items: flex-end;
     transform: translateY(40px);
     transition: transform linear 0.3s;
     z-index: 99;
@@ -44,6 +43,7 @@
     height: 32px;
     border-radius: 50%;
     background-color: rgb(254 44 85 / 1);
+    cursor: pointer;
 
     &:hover {
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), #FE2C55;
